--- a/Linna_Mackenbrock_Portfolio/index.html
+++ b/Linna_Mackenbrock_Portfolio/index.html
@@ -121,18 +121,22 @@
 
         <p>&nbsp;</p>
 
-        <div>
-            <h2>Zeiger, Zeiger, dreh dich um!</h2>
+        <div id="Zeiger">
+            <div id="zeigerüberschrift">
+                <h2>Zeiger, Zeiger, dreh dich um!</h2>
+            </div>
 
-            <div>
-                <p>Dieses Projekt fande ich besonders spannnend, da es eine Menge
-                an Codes gebraucht hat, von denen ich nicht erwatet habe, dass man
-                diese braucht. Es war zwar nicht einfach, da. ständig irgentwelche
-                Probleme aufgetaucht sind, trotzdem finde ich, dass es allem in allem
-                relativ gut geworden ist.Ich selbst spiele manchmal, aus langeweile,
-                mit dem Pfeil. Probiere es doch selber gerne einmal aus, indem du
-                deine Maus über den Bildschirm ziehst.
-                Viel Spaß!</p>
+            <div id="strich">
+                <div id="pfeilbeschreibung">
+                    <p>Dieses Projekt fande ich besonders spannnend, da es eine Menge </p>
+                    <p>an Codes gebraucht hat, von denen ich nicht erwatet habe, dass man </p>
+                    <p>diese braucht. Es war zwar nicht einfach, da. ständig irgentwelche </p>
+                    <p>Probleme aufgetaucht sind, trotzdem finde ich, dass es allem in allem </p>
+                    <p>relativ gut geworden ist.Ich selbst spiele manchmal, aus langeweile, </p>
+                    <p>mit dem Pfeil. Probiere es doch selber gerne einmal aus, indem du </p>
+                    <p>deine Maus über den Bildschirm ziehst. </p>
+                    <p>Viel Spaß!</p>
+                </div>
 
                 <div id="Pfeil">
                     <div id="zeiger">
